; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_UtfToUni.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_UtfToUni.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UtfToUni(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %7, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %11, %3
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @UniStrCpy(i8* %15, i32 %16, i8* bitcast ([1 x i32]* @.str to i8*))
  store i32 0, i32* %4, align 4
  br label %29

18:                                               ; preds = %11
  %19 = load i8*, i8** %7, align 8
  %20 = call i8* @CopyUtfToUni(i8* %19)
  store i8* %20, i8** %8, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @UniStrCpy(i8* %21, i32 %22, i8* %23)
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @Free(i8* %25)
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @UniStrLen(i8* %27)
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %18, %14
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @UniStrCpy(i8*, i32, i8*) #1

declare dso_local i8* @CopyUtfToUni(i8*) #1

declare dso_local i32 @Free(i8*) #1

declare dso_local i32 @UniStrLen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
